@@ -498,7 +498,13 @@
       \item \code{legend(*, cex = 1:2)} now works less badly.
 
       \item \code{duplicated(<dataframe with 'f'>)} now works, too,
-      thanks to Andreas Kersting's \PR{17485}.
+      thanks to Andreas Kersting's \PR{17485}; ditto for
+      \code{anyDuplicated()}.
+
+      \item The \code{print()} method for \code{POSIXct} and
+      \code{POSIXlt} now correctly obeys \code{getOption("max.print")},
+      fixing a long-standing typo, and it also gets a corresponding
+      optional \code{max} argument.
     }
   }
 }
